@@ -9,6 +9,7 @@ package org.ucdetector.quickfix;
 
 import org.eclipse.core.resources.IMarker;
 import org.eclipse.jdt.core.dom.BodyDeclaration;
+import org.eclipse.jdt.core.dom.LineComment;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.ui.ISharedImages;
 import org.ucdetector.Messages;
@@ -26,7 +27,11 @@ class DeleteQuickFix extends AbstractUCDQuickFix {
   @Override
   public void runImpl(IMarker marker, ElementType elementType,
       BodyDeclaration nodeToChange) throws Exception {
-    rewrite.remove(nodeToChange, null);
+    // [ 2721955 ] On QuickFix the direct sibling marker gets deleted too
+    // rewrite.remove(nodeToChange, null); // This line did not work
+    // Hack: replace deleted note by a comment
+    LineComment lineComment = nodeToChange.getAST().newLineComment();
+    rewrite.replace(nodeToChange, lineComment, null);
     commitChanges();
   }
 
